Add route to retrieve individual AVS
